--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 body{
-    background: #080808;
+    background: #76B947;
     color: #fff;
 
 }
@@ -84,7 +84,7 @@ nav ul li a:hover::after{
 
 #about{
     padding: 80px 0;
-    color: #ababab;
+    color: #fff;
 }
 .row{
     display: flex;
@@ -203,6 +203,7 @@ nav ul li a:hover::after{
 }
 .work img{
     width: 100%;
+    height: 100%;
     border-radius: 10px;
     display: block;
     transition: transform 0.5s;
@@ -286,7 +287,7 @@ nav ul li a:hover::after{
     text-decoration: none;
     font-size: 30px;
     margin-right: 15px;
-    color: #ababab;
+    color: #262626;
     display: inline-block;
     transition: transform 0.5s;
 }
@@ -334,12 +335,12 @@ from btn2{
     display: none;
 }
 .leet{
-    height: 35px;
+    height: 27px;
     width: auto;
-    margin-left: -8px;
-    margin-bottom: -10px;
-    border-radius: 4px;
-    width: 50px;
+    margin-left: 0px;
+    margin-bottom: -2px;
+    border-radius: 2px;
+    width: 27px;
 }
 @media only screen and (max-width: 600px){
     #header{
