--- a/style.css
+++ b/style.css
@@ -93,11 +93,13 @@ nav ul li a:hover::after{
 }
 .about-col-1{
     flex-basis: 35%;
+    overflow: hidden;
 }
 .about-col-1 img{
     width: 100%;
     height: 80%;
     border-radius: 15%;
+    object-fit: cover;
 }
 .about-col-2{
     flex-basis: 60%;
