--- a/style.css
+++ b/style.css
@@ -433,3 +433,8 @@ from btn2{
     margin-top: -40px;
     display: block;
 }
+.mail:hover{
+    background-color: #b54769;
+    border-radius: 1rem;
+    
+}
